--- a/webstoreonline/src/main/resources/application.yml
+++ b/webstoreonline/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/webstoreonline
+    url: jdbc:mysql://localhost:3306/webstoreonline?createDatabaseIfNotExist=true
     username: root
     password: 01229696443Vi
-    drive-class-name: my.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.SQLServerDialect
-        ddl-auto: update
-    show-sql: true
-
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        show-sql: true
+        format_sql: true
+    
